# ba

./: .travis.yml  Bio-Algorithm-Sequence.html  Bio-Algorithm-Types-DNA.html  Bio-Algorithm-Types-Protein.html  Bio-Algorithm-Types-RNA.html  Bio-Algorithm-Types-RawSequence.html  Bio-Algorithm-Types-Sequence.html  Bio-Algorithm-Types.html  README.md  ba.cabal  ba.haddock  doc-index.html  index-frames.html  index.html  mini_Bio-Algorithm-Sequence.html  mini_Bio-Algorithm-Types-DNA.html  mini_Bio-Algorithm-Types-Protein.html  mini_Bio-Algorithm-Types-RNA.html  mini_Bio-Algorithm-Types-RawSequence.html  mini_Bio-Algorithm-Types-Sequence.html  mini_Bio-Algorithm-Types.html
scripts/: deploy-haddock-manually.sh
src/Bio/Algorithm/: Sequence.hs  Types.hs
src/Bio/Algorithm/Types/: DNA.hs  Protein.hs  RNA.hs  RawSequence.hs  Sequence.hs
tests/: doctests.hsc
