name:                ba
version:             0.1.0.0
synopsis:            General bioinformatics algorithms library
-- description:
homepage:            https://github.com/relrod/ba
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bio.Algorithm.Sequence
                     , Bio.Algorithm.Types
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.12
                     , containers >= 0.4 && < 0.6
                     , lens >= 4 && < 5
                     , text >= 1 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
