name:                ba
version:             0.1.0.0
synopsis:            General bioinformatics algorithms library
-- description:
homepage:            https://github.com/relrod/ba
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2017 Ricky Elrod
category:            Bioinformatics
build-type:          Custom
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.2

library
  exposed-modules:     Bio.Algorithm.Types
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.9 && < 0.12
                     , containers >= 0.4 && < 0.6
                     , lens >= 4 && < 5
                     , text >= 1 && < 2
                     , semigroups >= 0.18 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

--test-suite doctests
--  default-language:    Haskell2010
--  type:                exitcode-stdio-1.0
--  main-is:             doctests.hs
--  hs-source-dirs:      tests
--  build-depends:       base
--                     , directory
--                     , doctest
--                     , filepath
